# sound_effects_player

./: .travis.yml  John_Sauter_public_key.asc  Makefile.am  Makefile.in  NEWS  OSC_1.txt  README  aclocal.m4  build_RPMs.sh  config.h.in  config.h.in~  configure  configure.ac  debug_sound_effects_player.sh  make_examples.sh  qjackctl_patchbay.xml  sound_effects_player-0.129.tar.gz.asc  sound_effects_player-0.130.tar.gz.asc  sound_effects_player-0.131.tar.gz.asc  sound_effects_player.desktop  sound_effects_player.desktop.in  sound_effects_player.spec  test_multichannel.sh  test_not_negotiated.sh  test_resample.sh  test_wavparse.sh  try_player.sh
Docs/: How_to_use_the_Sound_Effects_Player.odt  Makefile.am  Makefile.in  project_file.odt  references.bib  sound_effects.aux  sound_effects.out  sound_effects.tex  sound_effects_player_example_04.tex  sound_effects_player_overview.odt
doc/: Makefile.in
example_01/: Makefile.in
example_02/: Example_02_project.xml  Example_02_sound_sequence.xml  Example_02_sounds.xml  Makefile.in  run_example_02.xml
example_03/: Example_03_equipment.xml  Example_03_project.xml  Example_03_sound_sequence.xml  Example_03_sounds.xml  Makefile.in  Theater_equipment.xml  Theater_sound_sequence.xml  Theater_sounds.xml  run_example_03.xml
example_04/: Automobile.aup  Example_04_equipment.xml  Example_04_project.xml  Example_04_sound_sequence.xml  Example_04_sounds.xml  Makefile.in  Theater_sound_sequence.xml  Theater_sounds.xml
example_04/Automobile_data/eff/d1f/: eff1f070.au  eff1f090.au  eff1f0b8.au  eff1f0bb.au  eff1f0d9.au  eff1f0db.au  eff1f0f5.au  eff1f1b0.au  eff1f20c.au  eff1f2c1.au  eff1f2d3.au  eff1f2d5.au  eff1f2fa.au  eff1f442.au  eff1f533.au  eff1f655.au  eff1f661.au  eff1f6fd.au  eff1f746.au  eff1f774.au  eff1f796.au  eff1f7a3.au  eff1f881.au  eff1f8e3.au  eff1f906.au  eff1f9c7.au  eff1fa21.au  eff1fa55.au  eff1fa80.au  eff1fb84.au  eff1fdb6.au  eff1fdf2.au  eff1fe96.au  eff1fed6.au  eff1ff18.au
example_04/Wasteland/: Wasteland.aup
example_04/Wasteland/Wasteland_data/eff/d05/: eff05345.au  eff05395.au  eff0541d.au  eff05520.au  eff056a7.au  eff05751.au  eff05dce.au  eff05fbc.au
example_04/Wasteland/Wasteland_data/eff/d06/: eff06011.au  eff06065.au  eff06070.au  eff06092.au  eff060b4.au  eff060cc.au  eff060e7.au  eff060e8.au  eff06106.au  eff06187.au  eff0618e.au  eff061a9.au  eff061d2.au  eff061df.au  eff06209.au  eff06249.au  eff0627a.au  eff06284.au  eff06286.au  eff0628d.au  eff062b3.au  eff062cd.au  eff062e8.au  eff062f9.au  eff06312.au  eff06354.au  eff0636e.au  eff0638a.au  eff063a5.au  eff063b5.au  eff063d4.au  eff063e4.au  eff063ed.au  eff06423.au  eff06466.au  eff0646c.au  eff064aa.au  eff064c4.au  eff064cf.au  eff064dc.au  (+122 more)
example_04/Wasteland/Wasteland_data/eff/d09/: eff09000.au  eff09013.au  eff0901a.au  eff09064.au  eff09065.au  eff09089.au  eff090a4.au  eff090a6.au  eff090b2.au  eff090df.au  eff0910b.au  eff0912d.au  eff0915c.au  eff09180.au  eff09188.au  eff091c2.au  eff09222.au  eff09258.au  eff09265.au  eff09276.au  eff09284.au  eff09291.au  eff09298.au  eff092ba.au  eff092e7.au  eff092f2.au  eff09320.au  eff09328.au  eff0932d.au  eff09367.au  eff093a5.au  eff09406.au  eff09421.au  eff09440.au  eff09453.au  eff09460.au  eff0947d.au  eff0948a.au  eff094c3.au  eff094cb.au  (+79 more)
example_04/Wasteland/Wasteland_data/eff/d1e/: eff1e073.au  eff1e126.au  eff1e156.au  eff1e1a8.au  eff1e1d5.au  eff1e1d6.au  eff1e29f.au  eff1e2c3.au  eff1e2c8.au  eff1e373.au  eff1e3c4.au  eff1e44d.au  eff1e464.au  eff1e4ca.au  eff1e56f.au  eff1e576.au  eff1e58a.au  eff1e58c.au  eff1e5ce.au  eff1e640.au  eff1e671.au  eff1e6f0.au  eff1e711.au  eff1e742.au  eff1e74d.au  eff1e7dd.au  eff1e88f.au  eff1e89c.au  eff1e8ba.au  eff1e90d.au  eff1e92b.au  eff1eaa5.au  eff1eb9b.au  eff1ebaf.au  eff1ebbd.au  eff1ec0f.au  eff1ec13.au  eff1ec69.au  eff1ec84.au  eff1ec89.au  (+17 more)
example_04/Wasteland/Wasteland_data/eff/d1f/: eff1f069.au  eff1f077.au  eff1f0a1.au  eff1f0c7.au  eff1f124.au  eff1f137.au  eff1f15c.au  eff1f171.au  eff1f175.au  eff1f1a8.au  eff1f1e9.au  eff1f1f5.au  eff1f206.au  (+67 more)
example_04/Weather/: 16_-_Thunder_W-Med_Splatty_Rain.flac  lightning.aup  lightning_crash.aup  thunder_109b.aup
examples/: Makefile.am  Makefile.in
examples/01/: Example_01_equipment.xml  Example_01_project.xml  Example_01_sound_sequence.xml  Example_01_sounds.xml  Makefile.am  Makefile.in  run_example_01.sh
examples/02/: Example_02_cues.xml  Example_02_equipment.xml  Example_02_sound_sequence.xml  Makefile.am  Makefile.in
examples/03/: Example_03_cues.xml  Example_03_sound_sequence.xml  Makefile.am  Makefile.in  Theater_equipment.xml  Theater_sound_sequence.xml
examples/04/: Example_04_sound_sequence.xml  Example_04_sounds.xml  Makefile.am  Makefile.in  Theater_equipment.xml  Theater_sound_sequence.xml  Theater_sounds.xml  run_example_04.sh
icons/: Makefile.in
man/: Makefile.am  Makefile.in  sound_effects_player.1
many/: Sample_cues.xml  Sample_equipment.xml  Sample_project.xml  Sample_sound_sequence.xml  Sample_sounds.xml
po/: POTFILES.skip
sample/: Makefile.am  Makefile.in  Sample_config.xml  Sample_equipment.xml  Sample_sound_sequence.xml  Sample_sounds.xml  run_sample.sh  try_player.sh
src/: Makefile.am  Makefile.in  app-menu.ui  button_subroutines.c  button_subroutines.h  display_subroutines.c  display_subroutines.h  dtai_table.h  dtai_table.tab  gstenvelope.c  gstlooper.c  gstlooper.h  gstreamer_subroutines.c  gstreamer_subroutines.h  main.c  main.h  menu_subroutines.c  menu_subroutines.h  message_subroutines.c  message_subroutines.h  network_subroutines.c  network_subroutines.h  parse_net_subroutines.c  parse_net_subroutines.h  parse_xml_subroutines.c  parse_xml_subroutines.h  sequence_structure.h  sequence_subroutines.c  sequence_subroutines.h  signal_subroutines.c  signal_subroutines.h  sound_effects_player.c  sound_effects_player.h  sound_effects_player.ui  sound_structure.h  sound_subroutines.c  sound_subroutines.h  time_copy.c  time_current_tm.c  time_current_tm_nano.c  (+18 more)
tests/: Makefile.am  Makefile.in
tests/Samples/: Makefile.am  Makefile.in
(+58 files in other folders)
