# File: Makefile.am, author: John Sauter, date: Juky 1, 2020.

#   Copyright © 2020 by John Sauter <John_Sauter@systemeyescomputerstore.com>

#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.

#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.

#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#   The author's contact information is as follows:
#     John Sauter
#     System Eyes Computer Store
#     20A Northwest Blvd.  Ste 345
#     Nashua, NH  03063-4066
#     telephone: (603) 424-1188
#     e-mail: John_Sauter@systemeyescomputerstore.com

sampledir=${datadir}/sound_effects_player/sample/
sampleexecdir=${datadir}/sound_effects_player/sample/

dist_sample_DATA = 440Hz.wav \
	Sample_config.xml \
	Sample_cues.xml \
	Sample_equipment.xml \
	Sample_project.xml \
	Sample_script.xml \
	Sample_sound_sequence.xml \
	Sample_sounds.xml

dist_sampleexec_SCRIPTS = run_sample.sh

# End of file Makefile.am
