# File: Makefile.am, author: John Sauter, date: Juky 1, 2020.

#   Copyright © 2020 by John Sauter <John_Sauter@systemeyescomputerstore.com>

#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.

#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.

#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#   The author's contact information is as follows:
#     John Sauter
#     System Eyes Computer Store
#     20A Northwest Blvd.  Ste 345
#     Nashua, NH  03063-4066
#     telephone: (603) 424-1188
#     e-mail: John_Sauter@systemeyescomputerstore.com

example01dir=${datadir}/sound_effects_player/examples/01/
example01execdir=${datadir}/sound_effects_player/examples/01/
dist_example01_DATA = 01.wav \
	02.wav \
	03.wav \
	04.wav \
	05.wav \
	06.wav \
	07.wav \
	08.wav \
	09.wav \
	10.wav \
	11.wav \
	12.wav \
	13.wav \
	14.wav \
	15.wav \
	16.wav \
	440Hz.wav \
	Example_01_cues.xml \
	Example_01_equipment.xml \
	Example_01_project.xml \
	Example_01_script.xml \
	Example_01_sound_sequence.xml \
	Example_01_sounds.xml

dist_example01exec_SCRIPTS = run_example_01.sh 

# End of file Makefile.am
