# File: Makefile.am, author: John Sauter, date: Juky 1, 2020.

#   Copyright © 2020 by John Sauter <John_Sauter@systemeyescomputerstore.com>

#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.

#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.

#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#   The author's contact information is as follows:
#     John Sauter
#     System Eyes Computer Store
#     20A Northwest Blvd.  Ste 345
#     Nashua, NH  03063-4066
#     telephone: (603) 424-1188
#     e-mail: John_Sauter@systemeyescomputerstore.com

example02dir=${datadir}/sound_effects_player/examples/02/
example02execdir=${datadir}/sound_effects_player/examples/02/
dist_example02_DATA = Example_02_cues.xml \
	Example_02_equipment.xml \
	Example_02_project.xml \
	Example_02_script.xml \
	Example_02_sound_sequence.xml \
	Example_02_sounds.xml \
	car.wav \
	circular_saw.wav 

dist_example02exec_SCRIPTS = run_example_02.sh 

# End of file Makefile.am
