# File: Makefile.am, author: John Sauter, date: Juky 1, 2020.

#   Copyright © 2020 by John Sauter <John_Sauter@systemeyescomputerstore.com>

#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.

#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.

#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#   The author's contact information is as follows:
#     John Sauter
#     System Eyes Computer Store
#     20A Northwest Blvd.  Ste 345
#     Nashua, NH  03063-4066
#     telephone: (603) 424-1188
#     e-mail: John_Sauter@systemeyescomputerstore.com

example03dir=${datadir}/sound_effects_player/examples/03/
example03execdir=${datadir}/sound_effects_player/examples/03/

dist_example03_DATA = Automobile.wav \
	Example_03_cues.xml \
	Example_03_equipment.xml \
	Example_03_project.xml \
	Example_03_script.xml \
	Example_03_sound_sequence.xml \
	Example_03_sounds.xml \
	Theater_cues.xml \
	Theater_equipment.xml \
	Theater_sound_sequence.xml \
	Theater_sounds.xml \
	background_music.wav \
	full_ring.wav 

dist_example03exec_SCRIPTS = run_example_03.sh 

# End of file Makefile.am
