# File: Makefile.am, author: John Sauter, date: Juky 1, 2020.

#   Copyright © 2020 by John Sauter <John_Sauter@systemeyescomputerstore.com>

#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.

#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.

#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#   The author's contact information is as follows:
#     John Sauter
#     System Eyes Computer Store
#     20A Northwest Blvd.  Ste 345
#     Nashua, NH  03063-4066
#     telephone: (603) 424-1188
#     e-mail: John_Sauter@systemeyescomputerstore.com


example04dir=${datadir}/sound_effects_player/examples/04/
dist_example04_DATA = 6_Channel_ID.wav \
	Example_04_equipment.xml \
	Example_04_project.xml \
	Example_04_sound_sequence.xml \
	Example_04_sounds.xml\
	Theater_equipment.xml \
	Theater_sound_sequence.xml \
	Theater_sounds.xml \
	apple.wav \
	baby_cry_1.wav \
	baby_cry_2.wav \
	bonk.wav \
	forest.wav \
	garden_ambience.wav \
	pre_show_music.wav \
	slap.wav 

example04Stevedir=${datadir}/sound_effects_player/examples/04/Steve_Devino/
dist_example04Steve_DATA = Steve_Devino/07-Dove_cooing.wav \
	Steve_Devino/08-Animal_medley.wav

example04Wastelanddir=${datadir}/sound_effects_player/examples/04/Wasteland/
dist_example04Wasteland_DATA = Wasteland/Wasteland.wav 

example04Weatherdir=${datadir}/sound_effects_player/examples/04/Weather/
dist_example04Weather_DATA = Weather/lightning_crash.wav \
	Weather/rain.wav \
	Weather/thunder_072.wav \
	Weather/thunder_103a.wav \
	Weather/thunder_103b.wav \
	Weather/thunder_103c.wav \
	Weather/thunder_103d.wav \
	Weather/thunder_107a.wav \
	Weather/thunder_107b.wav \
	Weather/thunder_109b.wav \
	Weather/wind.wav 

example04animalsdir=${datadir}/sound_effects_player/examples/04/animals/
dist_example04animals_DATA = animals/101a_rabbit_purring.wav \
	animals/101b_Egyptian_turtle.wav \
	animals/101c_chimp.wav \
	animals/101d_panther.wav \
	animals/101e_bird.wav \
	animals/101f_frog.wav \
	animals/101g_mice.wav \
	animals/101h_zebra.wav \
	animals/101i_ostrich.wav \
	animals/101j_newborn_giraffe.wav \
	animals/101k_elephant.wav 

example04announcementsdir=${datadir}/sound_effects_player/examples/04/announcements/
dist_example04announcements_DATA = \
	announcements/01-Evening_Long.wav \
	announcements/02-Evening_Short.wav \
	announcements/03-Evening_Long_Humorous.wav \
	announcements/04-Afternoon_Long.wav \
	announcements/05-Afternoon_Short.wav \
	announcements/06-Afternoon_Long_Humorous.wav \
	announcements/07-Morning_Short.wav \
	announcements/08-Intermission_Return.wav 

example04waterdir=${datadir}/sound_effects_player/examples/04/water/
dist_example04water_DATA = water/water1.wav \
	water/water2.wav \
	water/water3.wav \
	water/water4.wav 

example04execdir=${datadir}/sound_effects_player/examples/04/
dist_example04exec_SCRIPTS = run_example_04.sh 

# End of file Makefile.am
